--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.19.23",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-intl-url": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.42",
     "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sass": "^2.1.29",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
