--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "gatsby-plugin-sass": "^2.1.29",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
+    "raf": "^3.4.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-howler": "^3.7.4"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.12.0",
