--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "name": "was-huawei",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Andrew <cc6.magister@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.4.1",
     "gatsby": "^2.19.23",
@@ -14,7 +12,6 @@
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.29",
     "node-sass": "^4.13.1",
-    "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
