--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^2.2.42",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.29",
+    "intersection-observer": "^0.7.0",
     "node-sass": "^4.13.1",
     "raf": "^3.4.1",
     "react": "^16.13.0",
