--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-helmet": "^5.2.1",
     "react-howler": "^3.7.4",
     "react-intersection-observer": "^8.26.1",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-tooltip": "^4.1.0"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.12.0",
