--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-howler": "^3.7.4",
     "react-intersection-observer": "^8.26.1",
     "react-spring": "^8.0.27",
-    "react-tooltip": "^4.1.0"
+    "react-tooltip": "^4.1.0",
+    "youtube-iframe": "^1.0.3"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.12.0",
